--- a/frontend/css/lexical.css
+++ b/frontend/css/lexical.css
@@ -153,8 +153,8 @@ body {
 /* main */
 #lexical-inner-content {
     display: flex;
-    width: 100%;
-    gap: 20px;
+    width: 1400px;
+    gap: 10px;
     height: calc(100% - 260px);
 }
 
@@ -172,49 +172,19 @@ body {
     margin-left: -52px;
 }
 
-
-.line-numbers {
-    width: 40px;
-    background: #212;
-    color: gold;
-    text-align: right;
-    padding: 10px 10px;
-    box-sizing: border-box;
-    font-family: monospace;
-    font-size: 1em;
-    overflow: hidden;
-    user-select: none;
-    margin-left: -3px;
-    border-right: 2px solid gold;
-}
-
-#code-container {
-    width: 100%;
-    height: 300px;
-    border: 1px solid #333;
-    overflow: auto;
-    white-space: pre;
-}
-
-#code {
+#editor {
     flex: 1;
     background: transparent;
     color: #fff;
-    padding: 10px;
     font-family: monospace;
     font-size: 1em;
     resize: none;
     border: none;
     outline: none;
     overflow: auto;
-    white-space: pre
-}
-
-#code, #code * {
-    color: #fff !important;
-    background: transparent !important;
-    font: inherit !important;
-}
+    white-space: pre;
+    margin-left: -2px;
+}   
 
 /* right column */
 #table-terminal {
@@ -236,6 +206,7 @@ body {
     border-radius: 15px;
     box-sizing: border-box;
     overflow-y: auto;
+    width: 820px;
     min-height: 0;
 }
 
